Add Google Camera dot fix from Arnova and split libs for OP5 and OP5T
Change-Id: I7fb41ad8875ae8ac1235755c032b6aa734917d1e

--- a/prebuilt/system/etc/init/init.qcom.rc
+++ b/prebuilt/system/etc/init/init.qcom.rc
@@ -4,6 +4,8 @@ on init
     mount none /system/lib/modules/msm_11ad_proxy.ko /vendor/lib/modules/msm_11ad_proxy.ko bind
     mount none /dev/null /vendor/overlay/SysuiDarkTheme/SysuiDarkThemeOverlay.apk bind
     mount none /system/lib/libmmcamera_imx371.so /vendor/lib/libmmcamera_imx371.so bind
+    mount none /system/lib/libmmcamera_imx398.so /vendor/lib/libmmcamera_imx398.so bind
+    mount none /system/lib/hw/camera.msm8998.so /vendor/lib/hw/camera.msm8998.so bind
     mount none /system/lib/hw/lights.oneplus5.so /vendor/lib/hw/lights.msm8998.so bind
     mount none /system/lib64/hw/lights.oneplus5.so /vendor/lib64/hw/lights.msm8998.so bind
     mount none /system/lib/hw/power.oneplus5.so /vendor/lib/hw/power.qcom.so bind
